--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Positional</string>
+    <string name="ad_mob_app_id">ca-app-pub-2302907862321663~2829686839</string>
+
+    <!-- Main Activity -->
     <string name="google_play_services_connection_failed_title">Google Play Services Connection Failed</string>
     <string name="google_play_services_connection_failed_message">Would you like to try again?</string>
     <string name="access_fine_location_permission_explanation_title">Location Permission Required</string>
@@ -8,4 +11,10 @@
     <string name="unit_meters">meters</string>
     <string name="try_again">Try Again</string>
     <string name="exit">Exit</string>
+
+    <!-- Ad Mob-->
+    <string name="ad_mob_device_id_mike_trewartha">090CB08C1F7EEC65738661F15553DCD9</string>
+    <string name="ad_mob_main_activity_banner_unit_id">ca-app-pub-2302907862321663/4306420033</string>
+    <string name="ad_mob_remove_button">Remove Ads</string>
+
 </resources>
