--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="elevation">elevation</string>
     <string name="latitude">latitude</string>
     <string name="longitude">longitude</string>
-    <string name="provider">provider</string>
+    <string name="provider_status">provider status</string>
+    <string name="provider_status_available">active</string>
+    <string name="provider_status_out_of_service">waiting</string>
+    <string name="provider_status_temporarily_unavailable">unavailable</string>
     <string name="satellites">satellites</string>
     <string name="sats">sats</string>
     <string name="speed">speed</string>
