Extract location formatting into LocationFormatter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="satellites">satellites</string>
     <string name="sats">sats</string>
     <string name="speed">speed</string>
+    <string name="unknown">unknown</string>
 
     <!-- Settings -->
     <string name="settings_filename">Positional</string>
