Switch back to Fused provider and remove Satellites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,7 @@
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="none">none</string>
-    <string name="gps_status">GPS Status</string>
-    <string name="gps_status_available">active</string>
-    <string name="gps_status_out_of_service">waiting</string>
-    <string name="gps_status_temporarily_unavailable">unavailable</string>
-    <string name="satellites">Satellites</string>
-    <string name="sats">sats</string>
+    <string name="provider">Provider</string>
     <string name="screen_lock_off">Screen lock disabled</string>
     <string name="screen_lock_on">Screen lock enabled</string>
     <string name="speed">Speed</string>
