--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="unit_degrees">°</string>
     <string name="unit_feet">ft</string>
     <string name="unit_meters">m</string>
+    <string name="unit_kmh">km/h</string>
     <string name="unit_mph">mph</string>
     <string name="unit_mps">m/s</string>
     <string name="try_again">Try Again</string>
