--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,18 @@
     <string name="unit_mps">m/s</string>
     <string name="unknown">unknown</string>
 
+    <!-- Compass -->
+    <string name="compass_degrees">%d°</string>
+    <string name="compass_accuracy_title">ACCURACY</string>
+    <string name="compass_accuracy_accelerometer">accelerometer: %s</string>
+    <string name="compass_accuracy_magnetometer">magnetometer: %s</string>
+    <string name="compass_accuracy_unknown">unknown</string>
+    <string name="compass_accuracy_no_contact">unusable</string>
+    <string name="compass_accuracy_unreliable">unreliable</string>
+    <string name="compass_accuracy_low">low</string>
+    <string name="compass_accuracy_medium">medium</string>
+    <string name="compass_accuracy_high">high</string>
+
     <!-- Settings -->
     <string name="settings_filename">Positional</string>
     <string name="settings_elevation_unit_default">feet</string>
