--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="unknown">unknown</string>
 
     <!-- Compass -->
+    <string name="compass_declination">declination: %s°</string>
     <string name="compass_degrees">%d°</string>
     <string name="compass_accuracy_accelerometer">accelerometer: %s</string>
     <string name="compass_accuracy_high">high</string>
@@ -55,14 +56,18 @@
     <string name="compass_accuracy_no_contact">unusable</string>
     <string name="compass_accuracy_no_sensor_found">no sensor found</string>
     <string name="compass_accuracy_not_applicable">n/a</string>
-    <string name="compass_accuracy_title">ACCURACY</string>
-    <string name="compass_accuracy_unknown">unknown</string>
+    <string name="compass_accuracy_title">ACCURACY </string>
+    <string name="compass_accuracy_unknown">unknown </string>
     <string name="compass_accuracy_unreliable">unreliable</string>
+    <string name="compass_mode_title">MODE</string>
+    <string name="compass_mode_magnetic_north">magnetic north</string>
+    <string name="compass_mode_true_north">true north</string>
     <string name="compass_sensor_missing_button_positive">@string/ok</string>
     <string name="compass_sensor_missing_message">Hmm… Your device is missing an accelerometer or magnetometer, but the compass needs both of them. The compass will be disabled, but the rest of the app will function normally.</string>
     <string name="compass_sensor_missing_title">Missing Required Sensor</string>
 
     <!-- Settings -->
+    <string name="settings_compass_mode">compassMode</string>
     <string name="settings_filename">Positional</string>
     <string name="settings_elevation_unit_default">feet</string>
     <string name="settings_metric_units_key">metricUnits</string>
