--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
-<resources>
-    <string name="app_name">Positional</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name" tools:override="true">Positional</string>
 
     <!-- Common Dialog Button Text -->
     <string name="ok">OK</string>
@@ -82,5 +82,22 @@
     <string name="settings_screen_lock_key">screenLock</string>
     <string name="settings_screen_lock_content_description">lock screen</string>
     <string name="settings_share_content_description">share coordinates</string>
+
+    <!-- Sign In/Out -->
+    <string name="sign_in_cancelled">Sorry, but to use Positional, you need to sign in.</string>
+    <string name="sign_in_failed_no_network">Hmm, it looks like you need a better internet connection. Try signing in again later.</string>
+    <string name="sign_in_failed_unknown">Sorry, something unexpected went wrong. The developer has been notified. Try signing in again later.</string>
+    <string name="sign_in_title">Let\'s get started!</string>
+    <string name="sign_in_message">Please sign in with your Google account.</string>
+    <string name="sign_in_why">Why do I need an account?</string>
+    <string name="sign_in_why_title">Why do I need an account?</string>
+    <string name="sign_in_why_message">Positional uses your account to store your personal preferences and sync them across all devices that have Positional installed.</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="sign_out_failed">Hmm… that\'s odd, signing out failed for some reason. Please try again.</string>
+    <string name="user_photo_content_description">Profile Photo</string>
+    <string name="user_thumbnail_content_description">Profile</string>
+
+    <!-- Transition Names -->
+    <string name="transition_user_photo">userPhoto</string>
 
 </resources>
