--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name" tools:override="true">Positional</string>
 
     <!-- Common Text -->
-    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="ok">OK</string>
     <string name="try_again">Try Again</string>
 
     <!-- Permissions -->
@@ -60,8 +61,10 @@
     <string name="track_card_delete">@string/delete</string>
     <string name="track_card_edit">@string/edit</string>
     <string name="track_card_time_content_description">Date and Time</string>
-    <string name="track_delete_success_snackbar">Deleted</string>
-    <string name="track_delete_failure_snackbar">Unable to delete track</string>
+    <string name="track_delete_success_snackbar">Deleted %s</string>
+    <string name="track_delete_failure_snackbar">Unable to delete %s</string>
+    <string name="tracks_delete_dialog_title">Delete %s?</string>
+    <string name="tracks_delete_dialog_message">This is permanent and cannot be undone.</string>
     <string name="track_default_name">Unnamed Track</string>
     <string name="tracks_empty_title">No Recorded Tracks</string>
     <string name="tracks_empty_subtitle">Check out the Map screen to record one!</string>
